--- a/styles/global.css
+++ b/styles/global.css
@@ -24,6 +24,8 @@ body {
     font: var(--text);
     color: var(--text-color-secondary);
     background-color: var(--background-color);
+    min-width: 360px;
+    overflow-x: hidden;
 }
 
 a {
@@ -36,12 +38,42 @@ a:hover {
     text-decoration: underline;
 }
 
+.gap-2 {
+    gap: 2rem;
+}
+
+.desktop-only {
+    display: none;
+}
+
+.even-columns {
+    display: grid;
+    gap: 1rem;
+}
+
 .container {
-    padding-inline: 32px;
-    max-width: 1280px;
+    --max-width: 360px;
+    width: min(var(--max-width), calc(100% - 32px));
     margin-inline: auto;
 }
 
 .bg-surface-color {
     background-color: var(--surface-color);
+}
+
+@media (width >= 80em) {
+    .container {
+        padding-inline: 32px;
+        width: 1280px;
+        margin-inline: auto;
+    }
+
+    .desktop-only {
+        display: initial;
+    } 
+
+    .even-columns {
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr;
+    }
 }
