--- a/styles/main.css
+++ b/styles/main.css
@@ -11,3 +11,16 @@ main img {
     object-fit: cover;
 
 }
+
+@media (width < 80em) {
+
+    main {
+        gap: 16px;
+        justify-content: center;
+
+        & img {
+            width: 328px;
+            height: 328px;
+        }
+    }
+}
