--- a/styles/nav.css
+++ b/styles/nav.css
@@ -12,7 +12,7 @@ nav ul {
     display: flex;
     align-items: center;
 
-    gap: 24px;
+    gap: .25rem;
     padding-block: 8px;
 }
 
@@ -21,4 +21,10 @@ nav ul li:last-child img {
     height: 40px;
     object-fit: cover; /*Vai cobrir todo o espaço definido a cima */
     border-radius: 50%;
+}
+
+@media (width >= 80em) {
+    nav ul {
+        gap: 1.5rem;
+    }
 }
