--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,9 +3,33 @@ footer {
     gap: 24px;
     padding-block: 24px;
 
-    font: 14px/150% var(----font-family);
+    & .terms-policy {
+        display: flex;
+        gap: 1rem;
+    }
+
+    font: 14px/150% var(--font-family);
 }
 
 footer span:nth-child(1) {
     margin-right: auto;
+}
+
+@media (width < 80em) {
+    footer {
+        padding: 1rem;
+        display: grid;
+        gap: 1rem;
+        place-content: center;
+
+        & #copy {
+            width: 100%;
+            text-align: center;
+        }
+
+        & .terms-policy {
+            display: flex;
+            gap: 1rem;
+        }
+    }
 }
