--- a/styles/global.css
+++ b/styles/global.css
@@ -52,8 +52,7 @@ a:hover {
 }
 
 .container {
-    --max-width: 360px;
-    width: min(var(--max-width), calc(100% - 32px));
+    padding: 16px;
     margin-inline: auto;
 }
 
@@ -64,7 +63,7 @@ a:hover {
 @media (width >= 80em) {
     .container {
         padding-inline: 32px;
-        width: 1280px;
+        max-width: 1280px;
         margin-inline: auto;
     }
 
